--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ canvas{
 #particles-js{
   width: 100%;
   height: 100%;
-  background-image: url('../img/background.png');
+  background-image: url('../img/background.jpg');
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
